# RayTrac1ng

./: CMakeLists.txt  README.md  error_log.txt
src/: color.hpp  main.cpp
